fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@
 
 html {
 	height: 100%;
-	overflow: hidden;
+	/* overflow: hidden; */
 }
 
 body {
@@ -33,7 +33,12 @@ body {
 	color: var(--text-color);
 	font-size: 1.2rem;
 	height: 100%;
-	overflow: hidden;
+	/* overflow: hidden; */
+}
+
+#root {
+	height: 100%;
+	/* overflow: hidden; */
 }
 
 a {
